# egregora

./: .codespellrc  .egregora-tenets.yml  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .repomixignore  .vulture_whitelist.py  404.html  ACTIONABLE_PLAN.md  AFTER_PRUNNING.md  AGENTS.md  ALIASES.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ROADMAP.md  ARCHITECTURE_V2.md  AUTOMERGE_FIX_COMPLETE.md  AUTO_DOCS_ARCHITECTURE.md  BANNER-SUPPORT.md  BRAINSTORM.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PHASE1C_CLI_ANALYSIS.md  CLEANUP_PHASE1_ENHANCED.md  CLEANUP_PHASE1_RESULTS.md  CLEANUP_PLAN.md  CLEANUP_SESSION_SUMMARY.md  CLEAN_UP_PLAN.md  CODE_ANALYSIS.md  CONFLICT_RESOLUTION_STRATEGY.md  CONTENT_ENRICHMENT_DESIGN.md  CONTRIBUTING.md  CROSS_MODULE_IMPORTS_ANALYSIS.md  CRYPTOGRAPHY_FIX.md  DARK_MODE_AUDIT.md  DEAD_CODE_ANALYSIS.md  DEAD_CODE_ANALYSIS_REPORT.md  DEAD_CODE_DETECTION.md  DOCS_REBUILD_PLAN.md  DOCUMENTATION_ANALYSIS.md  (+177 more)
.agent/: ENRICHMENT_OPTIMIZATIONS.md
.github/: AI_PR_REVIEW.md  AUTO_REVIEW_SETUP.md  BRANCH_PROTECTION.md  GEMINI_PR_REVIEW.md  JULES_PR_REVIEW.md  PRECOMMIT_ANALYSIS.md  PR_746_RECONCILIATION.md  PULL_REQUEST_TEMPLATE.md  WORKFLOWS_ANALYSIS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.jules/: API_COMPLIANCE_REVIEW.md  AUTO_MERGE_SETUP.md  CONVERSATION.md  IMPROVEMENT_REPORT.md  PARALLEL_PERSONAS_PLAN.md  PARALLEL_PERSONAS_PROMPT.md  PARALLEL_PERSONAS_README.md  PROMPT.md  README.md  SESSION_ID_PATTERNS.md  bolt.md  builder.md  curator.md  cycle_state.json  forge.md  history.csv  oracle_schedule.csv  palette.md  parallel-personas-session.txt  persona_priorities.toml  refactor.md  schedule.csv  schedules.toml  scribe.md  sentinel.md  session.json  sheriff.md  ux-vision-TODO.md  votes.csv
.pre-commit-hooks/: check-pandas-imports.py
.team/: API_COMPLIANCE_REVIEW.md  CONSTITUTION.md  IMPROVEMENT_REPORT.md  PARALLEL_PERSONAS_PLAN.md  PARALLEL_PERSONAS_PROMPT.md  PARALLEL_PERSONAS_README.md  README.md  SESSION_ID_PATTERNS.md  history.csv  palette.md  parallel-personas-session.txt  schedule.csv  tools_use.csv  votes.csv
CLAUDE/: index.html
CONTRIBUTING/: index.html
E2E Tests/: 2_Checkout code.txt  3_Setup Python environment.txt  6_Run E2E tests with coverage.txt  8_Upload coverage artifact.txt  system.txt
Pre-commit Hooks/: system.txt
RFCs/: 001-egregora-fm.md  001-egregora-symbiote.md  001-living-grimoire.md  001-the-echo-chamber.md  001-the-living-garden.md  002-project-codex.md  002-structured-data-sidecar.md  003-project-chameleon.md  003-the-synthetic-ghost.md  005-the-egregora-oracle.md  007-the-knowledge-hub.md  009-the-egregora-zeitgeist.md  012-the-egregora-atlas.md  013-structured-data-sidecar.md  015-pseudonymous-sidecar.md  016-the-collective-memory.md  017-related-concepts-api.md  018-cognitive-modeler.md  018-egregora-symbiote.md  018-the-live-egregora.md  019-event-driven-core.md  019-health-scorecard.md  019-real-time-adapter-framework.md
Security Scan/: 17_Post Setup Python environment.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Python environment.txt  6_Run safety check.txt  8_Run bandit (security linter).txt  system.txt
UX_REPORT/: index.html
Unit Tests (Python 3.12)/: 17_Post Setup Python environment.txt  1_Set up job.txt  2_Checkout code.txt  7_Upload coverage to Codecov.txt  9_Upload test results on failure.txt  system.txt
Workflow Summary/: 1_Set up job.txt  2_Post summary.txt  3_Complete job.txt  system.txt
adr/: index.html
api/: index.html
artifacts/: FINAL_TEST_REPORT.md  code_quality_log.txt  commits.txt  pr.diff  repomix-all.json  repomix-tests.json  run_log.txt  run_log_20704652493.txt  security_scan_log.txt  sync.patch  test_blog_1day_window.py  vulture_report_final.txt
bundles/: code.bundle.md  docs.bundle.md  tests.bundle.md
cache/: .gitignore  README.md  index.json  stats.json
ci_logs/: 0_Workflow Summary.txt  3_Pre-commit Hooks.txt  4_Security Scan.txt  5_E2E Tests.txt  6_Unit Tests (Python 3.12).txt
demo/: 404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  sitemap.xml
dev_tools/: __init__.py  check_imports.py  check_pandas_imports.py  check_private_imports.py  check_test_config.py  ci_pre_commit_check.sh  ci_probe.py  code_quality.py  gemini_recorder.py  generate_config_docs.py  generate_demo.py  import_allowlist.txt  jules_auto_fixer.py  jules_utils.py  record_fixtures.py  setup_hooks.py  verify_structure.py
devtools/: gemini_recorder.py
docs/: ARCHITECTURE_REVIEW.md  Anonimizar.md  CLAUDE.md  CODE_ANALYSIS.md  COMPLEXITY_REDUCTION_README.md  CONTENT_ENRICHMENT_DESIGN.md  DUPLICATION_REDUCTION_PLAN.md  OPENROUTER_INTEGRATION.md  RANKING.md  READER_JOURNEY.md  README.md  REFACTORING_PLAN.md  ROADMAP_SUMMARY.md  SECURITY_AUDIT_2025-11-11.md  SIMPLIFICATION_PLAN.md  Simplification.md  UX_REPORT.md  V3_REFLECTION.md  V3_REVIEW_BY_JULES.md  WEEK_1_EXECUTION.md  _base.yml  about.md  annotate_conversation_tool_plan.md  architecture-evaluation-2025-12.md  architecture.md  avaliacao-simplificacao-egregora.md  avaliacao-sugestoes-complementares.md  backlog_processing.md  bad-examples.md  code-smells-analysis.md  complexity-reduction-evaluation.md  complexity-reduction-final-plan-SIMPLIFIED.md  complexity-reduction-final-plan.md  complexity-reduction-plan-v2.md  complexity-reduction-plan.md  config-refactoring-guide.md  configuration.md  data-processing-optimization.md  discover.md  e2e-testing-plan.md  (+35 more)
features/: INDEX.md  README.md
final_verification/: README.md
gate_logs/: 0_Gemini Merge Gate.txt
google/: __init__.py
includes/: abbreviations.md
javascripts/: mathjax.js
journals/: 2026-01-16-1113-Benchmark-Analysis.md  2026-01-16-1920-Implemented_UX_Improvements.md
jules_feedback_loop_plan/: index.html
metrics/: enrichment_run.csv
notes/: ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_REVIEW.md  BRAINSTORM.md  CHANGELOG.md  DOCUMENTATION_MINIMIZATION_PLAN.md  FEATURES.md  GEMINI_PROMPT_IMPROVEMENT_ANALYSIS.md  (+25 more)
(+4170 files in other folders)
