[project]
name = "egregora"
version = "2.0.0"
description = "Ultra-simple pipeline to generate blog posts from WhatsApp exports."
readme = "README.md"
authors = [{ name = "Egregora" }]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "duckdb>=0.10.3",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "ibis-framework[duckdb]>=9.0.0",
    "rich>=13.7.0",
    "diskcache>=5.6.3",
    "python-dateutil>=2.9",
    "pydantic>=2.7",
    "pydantic-ai[logfire]>=0.0.14",
    "jinja2>=3.1.0",
    "pyarrow>=21.0.0",
    "typer[all]>=0.20.0",
    "pytest>=8.4.2",
    "python-slugify>=8.0.1", # Industry-standard slug generation
    "returns>=0.22.0", # Result types for error handling
    "werkzeug>=3.0.0", # Industry-standard path security (safe_join)
    "pydantic-evals[logfire]>=1.0.17",
    "httpx>=0.27.0", # HTTP client for avatar downloads with SSRF protection
    "pillow>=10.0.0", # Image processing for avatar validation (dimensions, format verification)
    "pyparsing>=3.1.0", # Parser combinators for WhatsApp message parsing (Phase 5)
]

[project.optional-dependencies]
test = [
    "pytest-vcr>=1.0.2",  # HTTP interaction recording for deterministic API tests
    "ruff>=0.4.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.30",
    "mkdocs-autorefs>=1.0",
    "mkdocs-static-i18n>=1.2",
    "python-dateutil>=2.9",
    "pymdown-extensions>=10.0",
    "codespell>=2.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-material[imaging]>=9.5",
]
rss = [
    "mkdocs-rss-plugin>=1.15",
]
ranking = []
lint = [
    "pre-commit>=3.8",
    "ruff>=0.4.4",
]

[project.scripts]
egregora = "egregora.cli:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/egregora"]

[tool.hatchling.build.targets.wheel.force-include]
"src/egregora/templates" = "egregora/templates"

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110  # Slightly more generous for strings/logs
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]  # Enable all stable rules
ignore = [
    # Formatter compatibility - MUST keep these to avoid conflicts
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "COM819",  # prohibited-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "ISC002",  # multi-line-implicit-string-concatenation (conflicts with formatter)
    "Q000",    # bad-quotes-inline-string (conflicts with formatter)
    "Q001",    # bad-quotes-multiline-string (conflicts with formatter)
    "Q002",    # bad-quotes-docstring (conflicts with formatter)
    "Q003",    # avoidable-escaped-quote (conflicts with formatter)
    "W191",    # tab-indentation (conflicts with formatter)

    # Docstring rules - incompatible pairs (one must be disabled)
    "D203",    # one-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)

    # Pragmatic ignores - legitimate patterns
    "S608",    # SQL injection (false positive with DuckDB/Ibis parameterized queries)
    "ERA001",  # Commented code (sometimes intentional for documentation/examples)
    "FIX002",  # TODO comments (active development)
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO link
    "ARG001",  # Unused function argument (needed for interface compatibility)
    "ARG002",  # Unused method argument (needed for interface compatibility)
    "ARG005",  # Unused lambda argument (needed for interface compatibility)
    "ANN401",  # Any type (sometimes necessary for flexibility)
    "TC001",   # Type-checking-only imports (can cause circular imports)
    "TC002",   # Type-checking-only third-party imports
    "TC003",   # Type-checking-only standard library imports
    "SIM102",  # Collapsible if (explicit can be clearer)
    "SIM108",  # Ternary operator (not always clearer)

    # Style - enforce gradually
    "E501",    # Line too long (refactor gradually, not blocking)
    "SLF001",  # Private member access (sometimes necessary for testing/integration)
    "G201",    # Logging exc_info (explicit is fine)

    # Datetime timezone - add gradually as features touch code
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ006",  # call-datetime-fromtimestamp
    "DTZ007",  # call-datetime-strptime-without-zone
    "DTZ011",  # call-date-today

    # Docstrings - enforce for new code, not blocking for existing
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D401",    # First line should be imperative
    "D417",    # Missing argument description in docstring
]

[tool.ruff.lint.per-file-ignores]
# Test files - allow testing patterns
"tests/**/*.py" = [
    "S101",    # Assert statements (expected in tests)
    "PLR2004", # Magic values (test data)
    "ANN",     # Type annotations (not required in tests)
    "D",       # Docstrings (not required in tests)
    "INP001",  # Implicit namespace package
    "S311",    # Random for testing
    "S324",    # Insecure hash for testing
    "S603",    # Subprocess without shell=True
    "S607",    # Partial executable path
    "S506",    # Unsafe YAML load (tests use small controlled data)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "egregora.ingestion.parser",
    "egregora.pipeline",
    "egregora.cli",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "ibis",
    "ibis.expr",
    "ibis.expr.types",
    "ibis.expr.datatypes",
    "pyarrow",
    "pyarrow.parquet",
    "duckdb",
    "diskcache",
    "frontmatter",
    "google",
    "google.genai",
    "google.genai.types",
    "google.generativeai",
    "google.generativeai.types",
    "google.ai.generativelanguage",
    "jinja2",
    "yaml",
    "dateutil",
    "dateutil.parser",
    "typer",
    "rich",
    "rich.console",
    "rich.progress",
    "rich.logging",
    "rich.markup",
    "rich.panel",
    "pydantic",
    "pydantic.fields",
    "pandas",
    "slugify",
    "returns",
    "returns.result",
    "werkzeug",
    "werkzeug.security",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "hypothesis>=6.147.0",
    "ruff>=0.14.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.0",
    "ruff>=0.4.4",
    "duckdb>=0.10.0",
]
