[project]
name = "egregora"
version = "2.0.0"
description = "Ultra-simple pipeline to generate blog posts from WhatsApp exports."
readme = "README.md"
authors = [{ name = "Egregora" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "diskcache>=5.6.3",
    "duckdb",
    "httpx>=0.28",
    "ibis-framework[duckdb]>=11.0",
    "jinja2>=3.1",
    "lancedb>=0.25",
    "mkdocs>=1.6",
    "mkdocs-macros-plugin>=1.5",
    "mkdocs-material[imaging]>=9.7",
    "mkdocs-rss-plugin>=1.17",
    "pillow>=11.3",
    "psutil>=6.1",  # Memory monitoring and profiling
    "pyarrow",
    "pydantic>=2.12",
    "pydantic-settings>=2.7",
    "pydantic-ai>=1.25",
    "pydantic-evals>=1.25",
    "python-dateutil>=2.9",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "pymdown-extensions>=10.17",
    "ratelimit>=2.2",
    "rich>=13.9",
    "tenacity>=9.1",
    "tiktoken>=0.12",
    "typer>=0.20",
    "scikit-learn>=1.7",
    # V3 Production Dependencies
    # Structured logging for async pipeline debugging
    "structlog>=24.4",
    # Atom feed validation (RFC 4287 compliance)
    "xmlschema>=3.6",
    # Async itertools (replaces custom batching utilities)
    "asyncstdlib>=3.13",
    # Advanced serialization for complex conversions
    "cattrs>=24.2",
    # High-performance XML processing for Atom feeds
    "lxml>=5.4",
]

[project.scripts]
egregora = "egregora.cli:main"

[project.entry-points."egregora.adapters"]
whatsapp = "egregora.input_adapters.whatsapp.adapter:WhatsAppAdapter"
iperon-tjro = "egregora.input_adapters.iperon_tjro:IperonTJROAdapter"
self = "egregora.input_adapters.self_reflection:SelfInputAdapter"

[project.optional-dependencies]
docs = [
    "codespell>=2.4.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.17.2",
]
rss = [
    "mkdocs-rss-plugin>=1.17.7",
]
test = [
    "ibis-framework[duckdb]>=11.0",
    "pytest>=9.0",
    "respx>=0.22",
    # Property-based testing for Pydantic models and data validation
    "hypothesis>=6.134",
    # Async testing support for pydantic-ai agents and async pipelines
    "pytest-asyncio>=0.25",
    # Enhanced mocking with cleaner fixture-based API
    "pytest-mock>=3.14",
    # Realistic test data generation for Atom feeds and documents
    "faker>=34.1",
    # Time travel for deterministic timestamp testing
    "freezegun>=1.5",
    # Parallel test execution for faster CI
    "pytest-xdist>=3.6",
    # Snapshot testing for Atom XML and prompt templates
    "syrupy>=4.9",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/egregora"]

[tool.hatchling.build.targets.wheel.force-include]
"src/egregora/templates" = "egregora/templates"
"src/egregora/resources/sql" = "egregora/resources/sql"
"src/egregora/prompts" = "egregora/prompts"

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110  # Slightly more generous for strings/logs
target-version = "py312"
extend-exclude = [
    ".claude",
    "prompt_tests",
]

[tool.ruff.lint]
select = ["ALL"]  # Enable all stable rules
ignore = [
    # Formatter compatibility - MUST keep these to avoid conflicts
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "COM819",  # prohibited-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "ISC002",  # multi-line-implicit-string-concatenation (conflicts with formatter)
    "Q000",    # bad-quotes-inline-string (conflicts with formatter)
    "Q001",    # bad-quotes-multiline-string (conflicts with formatter)
    "Q002",    # bad-quotes-docstring (conflicts with formatter)
    "Q003",    # avoidable-escaped-quote (conflicts with formatter)
    "W191",    # tab-indentation (conflicts with formatter)

    # Docstring rules - incompatible pairs (one must be disabled)
    "D203",    # one-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)

    # Pragmatic ignores - legitimate patterns
    "S608",    # SQL injection (false positive with DuckDB/Ibis parameterized queries)
    "ERA001",  # Commented code (sometimes intentional for documentation/examples)
    "FIX002",  # TODO comments (active development)
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO link
    "ARG001",  # Unused function argument (needed for interface compatibility)
    "ARG002",  # Unused method argument (needed for interface compatibility)
    "ARG005",  # Unused lambda argument (needed for interface compatibility)
    "ANN401",  # Any type (sometimes necessary for flexibility)
    "TC001",  # Type-checking-only imports (can cause circular imports)
    "TC002",  # Type-checking-only third-party imports
    "TC003",  # Type-checking-only standard library imports
    "SIM102",  # Collapsible if (explicit can be clearer)
    "SIM108",  # Ternary operator (not always clearer)

    # Style - enforce gradually
    "E501",    # Line too long (refactor gradually, not blocking)
    "SLF001",  # Private member access (sometimes necessary for testing/integration)
    "G201",    # Logging exc_info (explicit is fine)

    # Datetime timezone - add gradually as features touch code
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ006",  # call-datetime-fromtimestamp
    "DTZ007",  # call-datetime-strptime-without-zone
    "DTZ011",  # call-date-today

    # Docstrings - enforce for new code, not blocking for existing
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D401",    # First line should be imperative
    "D417",    # Missing argument description in docstring
]

[tool.ruff.lint.per-file-ignores]
# Test files - allow testing patterns
"tests/**/*.py" = [
    "S101",    # Assert statements (expected in tests)
    "PLR2004", # Magic values (test data)
    "ANN",     # Type annotations (not required in tests)
    "D",       # Docstrings (not required in tests)
    "INP001",  # Implicit namespace package
    "S311",    # Random for testing
    "S324",    # Insecure hash for testing
    "S603",    # Subprocess without shell=True
    "S607",    # Partial executable path
    "S506",    # Unsafe YAML load (tests use small controlled data)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# Ban pandas imports in src/egregora to keep the Ibis-first policy intact.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
pandas = { msg = "Use ibis-framework instead of pandas. Only allowed via ibis internals or compat layers." }
pyarrow = { msg = "Use ibis-framework instead of pyarrow. Only allowed via ibis internals or compat layers." }

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "egregora.ingestion.parser",
    "egregora.pipeline",
    "egregora.cli",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "ibis",
    "ibis.expr",
    "ibis.expr.types",
    "ibis.expr.datatypes",
    "pyarrow",
    "pyarrow.parquet",
    "duckdb",
    "diskcache",
    "frontmatter",
    "jinja2",
    "yaml",
    "dateutil",
    "dateutil.parser",
    "typer",
    "rich",
    "rich.console",
    "rich.progress",
    "rich.logging",
    "rich.markup",
    "rich.panel",
    "pydantic",
    "pydantic.fields",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "quality: code quality checks (vulture, radon, bandit)",
    "complexity: complexity checks with radon",
    "deadcode: dead code detection with vulture",
    "security: security scans with bandit",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end pipeline tests with mocked LLM responses",
    "benchmark: performance baseline tests for regression detection",
]
# Default coverage settings (can be overridden with CLI flags)
addopts = [
    "--strict-markers",  # Fail on unknown markers
    "-n",
    "auto",  # Parallel test execution using all available CPU cores
]
[dependency-groups]
dev = [
    "bandit>=1.9",
    "deptry>=0.24",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6",
    "hypothesis>=6.134",
    "faker>=34.1",
    "freezegun>=1.5",
    "syrupy>=4.9",
    "radon>=6.0",
    "ruff>=0.14",
    "vulture>=2.14",
    "respx>=0.22.0",
    "mkdocstrings-python>=2.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-rss-plugin>=1.17.7",
    "mkdocs-blogging-plugin>=2.2.11",
    "pytest-socket>=0.7.0",
]
