[project]
name = "egregora"
version = "3.0.1"
description = "Ultra-simple pipeline to generate blog posts from WhatsApp exports."
readme = "README.md"
authors = [{ name = "Egregora" }]
requires-python = ">=3.11,<3.13"
# Minimal core dependencies shared by Jules and Egregora
dependencies = [
    # Core utilities
    "httpx",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "python-frontmatter",
    "pyyaml",
    "rich",
    "tenacity",
    "typer",
    # Egregora core dependencies
    "diskcache",
    "ibis-framework[duckdb]",
    "python-dateutil",
    "pydantic-ai",
    "scikit-learn",
    "lancedb==0.27.0",
    "pillow",
    "ratelimit",
    # Site generation dependencies (for demo command)
    "mkdocs-material[imaging]",
    "mkdocs-glightbox",
    "numpy",
    "google-genai",
    "google-api-core",
]

[project.scripts]
egregora = "egregora.cli:app"
jules = "repo.cli.main:app"
mail = "repo.cli.mail:app"
my-tools = "repo.cli.my_tools:app"

[project.entry-points."egregora.adapters"]
whatsapp = "egregora.input_adapters.whatsapp.adapter:WhatsAppAdapter"
iperon-tjro = "egregora.input_adapters.iperon_tjro:IperonTJROAdapter"
self = "egregora.input_adapters.self_reflection:SelfInputAdapter"

[project.optional-dependencies]
# Jules scheduler/automation minimal dependencies
jules = [
    "boto3",  # For mail feature
]

# Egregora full dependencies (data processing, AI, blog generation)
egregora = [
    "duckdb",
    # AI/ML
    "pydantic-evals",
    "google-api-core",
    "google-genai",

    # Content generation
    "aiohttp",
    "urllib3",
    "lxml",

    # Site generation
    "mkdocs",
    "mkdocs-macros-plugin",
    "mkdocs-glightbox",
    "mkdocs-material[imaging]",
    "mkdocs-rss-plugin",
    "pymdown-extensions",
    "tomli-w",
]

mkdocs = [
    "mkdocs-material",
    "mkdocs-blogging-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
]
docs = [
    "codespell",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-material[imaging]",
    "mkdocs-minify-plugin",
    "mkdocs-static-i18n",
    "mkdocstrings[python]",
    "pymdown-extensions",
]
rss = [
    "mkdocs-rss-plugin",
]
test = [
    "ibis-framework[duckdb]",
    "pytest",
    "respx",
    "google-genai",
    # Property-based testing for Pydantic models and data validation
    "hypothesis",
    # Async testing support for pydantic-ai agents and async pipelines
    "pytest-asyncio",
    # Enhanced mocking with cleaner fixture-based API
    "pytest-mock",
    # Realistic test data generation for Atom feeds and documents
    "faker",
    # Time travel for deterministic timestamp testing
    "freezegun",
    # Parallel test execution for faster CI
    "pytest-xdist",
    # Snapshot testing for Atom XML and prompt templates
    "syrupy",
    "respx",
    "moto",
]

# Convenience group: all dependencies for development
all = [
    "egregora[egregora,jules,test,docs,rss,mkdocs]",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/egregora", ".team/repo"]

[tool.hatchling.build.targets.wheel.force-include]
"src/egregora/templates" = "egregora/templates"
"src/egregora/resources/sql" = "egregora/resources/sql"
"src/egregora/prompts" = "egregora/prompts"

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110  # Slightly more generous for strings/logs
target-version = "py312"
extend-exclude = [
    ".claude",
    ".team",
    "prompt_tests",
    "scripts",
    "docs/demo/.egregora",
    "README.md",
    "docs",
    "community",
    "mkdocs.yml",
    "mkdocs.yml",
    "RFCs",
    "artifacts",
]

[tool.ruff.lint]
select = ["ALL"]  # Enable all stable rules
ignore = [
    # Formatter compatibility - MUST keep these to avoid conflicts
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "COM819",  # prohibited-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "ISC002",  # multi-line-implicit-string-concatenation (conflicts with formatter)
    "Q000",    # bad-quotes-inline-string (conflicts with formatter)
    "Q001",    # bad-quotes-multiline-string (conflicts with formatter)
    "Q002",    # bad-quotes-docstring (conflicts with formatter)
    "Q003",    # avoidable-escaped-quote (conflicts with formatter)
    "W191",    # tab-indentation (conflicts with formatter)

    # Docstring rules - incompatible pairs (one must be disabled)
    "D203",    # one-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)

    # Legitimate exceptions - well-documented reasons
    "S608",    # SQL injection (false positive with DuckDB/Ibis parameterized queries)
    "ARG001",  # Unused function argument (needed for interface compatibility)
    "ARG002",  # Unused method argument (needed for interface compatibility)
    "ARG005",  # Unused lambda argument (needed for interface compatibility)
    "ANN401",  # Any type (sometimes necessary for flexibility)
    "PLC0415",  # Non-top-level imports (needed for optional dependencies)
    "PLW0603",  # Global statement (rare but needed for module state)
    "PLW2901",  # Redefined loop name (rare but needed for clarity)
    "TC001",    # Type-checking-only imports (pydantic needs runtime access)
    "TC002",    # Type-checking-only third-party imports (pydantic needs runtime access)
    "TC003",    # Type-checking-only standard library imports (pydantic models need runtime)
    "PD004",    # Pandas-vet false positive (Ibis uses .notnull())
    "SLF001",   # Private member access (sometimes necessary for testing/integration)

    # Complexity metrics - track but don't block (use radon/xenon in pre-commit)
    "C901",     # Function is too complex
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements

    # TODO management - enforce via FIX002 only
    "TD002",   # Missing TODO author (not required)
    "TD003",   # Missing TODO link (not required)

    # Docstrings - enforce selectively
    "D101",    # Missing docstring in public class (enforce for new code)
    "D102",    # Missing docstring in public method (enforce for new code)
    "D105",    # Missing docstring in magic method (not required)
    "D107",    # Missing docstring in __init__ (not required)
    "D401",    # First line should be imperative (not required)
    "D417",    # Missing argument description in docstring (not required)
    "FIX002",  # TODOs (don't block on existing TODOs)
    "E501",    # Line too long (handled by formatter best effort)
    "TRY",     # Exception handling patterns (opinionated)
    "ERA",     # Commented out code (allow during active dev)
    "DTZ",     # Timezone enforcement (too strict for this phase)
    "G",       # Logging format (f-strings are fine)
    "PLR",     # Refactoring suggestions (too broad)
    "SIM",     # Simplification suggestions (opinionated)
    "BLE",     # Blind exception catching (needed for robustness)
    "PT",      # Pytest style (too strict for existing tests)
]

[tool.ruff.lint.per-file-ignores]
# Generated artifacts
"artifacts/site/.egregora/__init__.py" = ["N999"]

# Test files - allow testing patterns
"tests/**/*.py" = [
    "S101",    # Assert statements (expected in tests)
    "PLR2004", # Magic values (test data)
    "ANN",     # Type annotations (not required in tests)
    "D",       # Docstrings (not required in tests)
    "INP001",  # Implicit namespace package
    "S311",    # Random for testing
    "S324",    # Insecure hash for testing
    "S603",    # Subprocess without shell=True
    "S607",    # Partial executable path
    "S506",    # Unsafe YAML load (tests use small controlled data)
    "S108",    # Hardcoded temp paths (tests)
    "PT009",   # unittest-style asserts (legacy tests)
    "PT017",   # assert on exception message (tests)
    "SIM117",  # nested context managers (tests)
    "PERF401", # list-building loops (tests)
]

# CLI files - Typer requires Option() calls in function signatures
"src/egregora/cli/*.py" = [
    "B008",    # Function call in argument defaults (required by Typer)
]

# Diagnostics - needs broad exception handling and subprocess calls for system checks
"src/egregora/cli/diagnostics.py" = [
    "BLE001",  # Blind except (intentional for fault-tolerant diagnostics)
    "S603",    # Subprocess without shell=True (safe - controlled input)
]

# Fault-tolerant components - need broad exception handling
"src/egregora/database/profile_cache.py" = [
    "BLE001",  # Blind except (cache failures shouldn't crash pipeline)
]
"src/egregora/orchestration/journal.py" = [
    "BLE001",  # Blind except (journal failures shouldn't crash pipeline)
]
"src/egregora/orchestration/runner.py" = [
    "BLE001",  # Blind except (worker failures need graceful degradation)
]
"src/egregora/rag/__init__.py" = [
    "BLE001",  # Blind except (RAG failures shouldn't crash pipeline)
]
"src/egregora/rag/embedding_router.py" = [
    "BLE001",  # Blind except (embedding failures need fallback)
]
"src/egregora/rag/lancedb_backend.py" = [
    "BLE001",  # Blind except (DB failures need graceful handling)
]

# YAML loading - safe usage with controlled input
"src/egregora/output_sinks/mkdocs/scaffolding.py" = [
    "S506",    # Unsafe YAML load (mkdocs config from trusted source)
]

# Media operations - intentional use of os.path for compatibility
"src/egregora/ops/media.py" = [
    "PTH122",  # os.path.splitext (needed for extension handling)
]

# Optimized author extraction - intentional use of os.path/open for performance
"src/egregora/knowledge/profiles.py" = [
    "PTH118",  # os.path.join (faster than Path /)
    "PTH123",  # open (faster than Path.open)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# Ban pandas imports in src/egregora to keep the Ibis-first policy intact.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
pandas = { msg = "Use ibis-framework instead of pandas. Only allowed via ibis internals or compat layers." }
pyarrow = { msg = "Use ibis-framework instead of pyarrow. Only allowed via ibis internals or compat layers." }

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "egregora.ingestion.parser",
    "egregora.pipeline",
    "egregora.cli",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "ibis",
    "ibis.common.exceptions",
    "ibis.backends.duckdb",
    "ibis.expr",
    "ibis.expr.types",
    "ibis.expr.datatypes",
    "ibis.common.exceptions",
    "ibis.backends.duckdb",
    "pyarrow",
    "pyarrow.parquet",
    "duckdb",
    "diskcache",
    "frontmatter",
    "jinja2",
    "yaml",
    "dateutil",
    "dateutil.parser",
    "typer",
    "rich",
    "rich.console",
    "rich.progress",
    "rich.logging",
    "rich.markup",
    "rich.panel",
    "pydantic",
    "pydantic.fields",
    "google",
    "google.generativeai",
    "ibis.common.exceptions",
    "ibis.backends.duckdb",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", ".team", "."]
markers = [
    "quality: code quality checks (vulture, radon, bandit)",
    "complexity: complexity checks with radon",
    "deadcode: dead code detection with vulture",
    "security: security scans with bandit",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end pipeline tests with mocked LLM responses",
    "benchmark: performance baseline tests for regression detection",
]
# Default coverage settings (can be overridden with CLI flags)
addopts = [
    "--strict-markers",  # Fail on unknown markers
    "-p",
    "no:logfire",  # Disable logfire plugin
]
[dependency-groups]
dev = [
    "bandit",
    "deptry",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "hypothesis",
    "faker",
    "freezegun",
    "syrupy",
    "radon",
    "xenon",
    "ruff",
    "mypy",
    "vulture",
    "respx",
    "mkdocstrings-python",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-blogging-plugin",
    "pytest-socket",
    "pytest-benchmark",
    "pip-audit",
    "moto",
    "pytest-bdd",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
sort_by_size = true
exclude = []
ignore_names = []

[tool.bandit]
targets = ["src"]
skips = ["B101", "B608", "B701"]  # B101: assert_used, B608: hardcoded_sql (DuckDB), B701: jinja2_autoescape (SQL/prompts, not HTML)
exclude_dirs = ["tests", ".venv", "build"]

[tool.coverage.run]
source = ["src/egregora"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 60.0

[tool.deptry]
ignore_notebooks = true
extend_exclude = [".team", "scripts", "artifacts", "docs", "tests", ".claude"]

[tool.deptry.package_module_name_map]
"pyyaml" = "yaml"
"ibis-framework" = "ibis"
"python-frontmatter" = "frontmatter"
"python-dateutil" = "dateutil"
"pillow" = "PIL"
"scikit-learn" = "sklearn"
"google-generativeai" = "google.generativeai"
"google-genai" = "google.genai"
"pydantic-settings" = "pydantic_settings"
"pymdown-extensions" = "pymdownx"
"google-api-python-client" = "googleapiclient"

[tool.deptry.per_rule_ignores]
DEP001 = ["dotenv", "google", "pydantic_core", "playwright", "repo", "requests", "uvicorn", "pydantic_graph", "repo_client"]
DEP002 = [
    "protobuf",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-macros-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-blogging-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-static-i18n",
    "mkdocstrings",
    "mkdocs-autorefs",
    "codespell",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "faker",
    "freezegun",
    "syrupy",
    "respx",
    "moto",
    "hypothesis",
    "google-api-core",
    "google-genai",
    "aiohttp",
    "urllib3",
    "lxml",
    "mkdocs-material[imaging]",
    "boto3",
    "google-generativeai", "pydantic-evals"
]

[tool.codespell]
ignore-words-list = "ontext,utput"
